load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "args.go",
        "builder.go",
        "equals.go",
        "expr.go",
        "value.go",
    ],
    importpath = "git.code.oa.com/goom/mocker/arg",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/hack:go_default_library",
        "//internal/proxy:go_default_library",
    ],
)
