load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "iface.go",
        "ifunc.go",
        "ifunc_16.go",
        "ifunc_18.go",
        "ifunc_win.go",
        "signal_notunix.go",
        "signal_unix.go",
        "version.go"
    ],
    importpath = "git.code.oa.com/goom/mocker/internal/hack",
    visibility = ["//:__subpackages__"],
)
