load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    gc_goopts = ["-l"],
    srcs = [
        "fix_addr_amd64.go",
        "fix_origin.go",
        "fix_origin_amd64.go",
        "fix_origin_arm64.go",
        "guard.go",
        "jumpdata.go",
        "monkey.go",
        "monkey_386.go",
        "monkey_amd64.go",
        "monkey_arm64.go",
        "patch.go",
        "signature.go",
    ],
    importpath = "github.com/Jakegogo/goom_mocker/internal/patch",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/bytecode:go_default_library",
        "//internal/bytecode/memory:go_default_library",
        "//internal/logger:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:amd64": [
            "//internal/arch/x86asm:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "go_default_test",
    gc_goopts = ["-l"],
    srcs = [
        "fix_addr_amd64_test.go",
        "monkey_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//internal/logger:go_default_library",
        "//internal/patch/test:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
