load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    gc_goopts = ["-l"],
    srcs = [
        "func.go",
        "interface.go",
    ],
    importpath = "github.com/Jakegogo/goom_mocker/internal/proxy",
    visibility = ["//:__subpackages__"],
    deps = [
        "//erro:go_default_library",
        "//internal/bytecode:go_default_library",
        "//internal/hack:go_default_library",
        "//internal/iface:go_default_library",
        "//internal/logger:go_default_library",
        "//internal/patch:go_default_library",
        "//internal/unexports:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "interface_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//internal/bytecode/stub:go_default_library",
        "//internal/hack:go_default_library",
        "//internal/iface:go_default_library",
        "//internal/logger:go_default_library",
    ],
)
