load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "compatible_above_18.go",
        "compatible_under_18.go",
        "suggestion.go",
        "unexports.go",
    ],
    importpath = "github.com/Jakegogo/goom_mocker/internal/unexports",
    visibility = ["//:__subpackages__"],
    deps = [
        "//erro:go_default_library",
        "//internal/hack:go_default_library",
        "//internal/logger:go_default_library",
    ],
)
