load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "decode.go",
        "inst.go",
        "tables.go",
    ],
    importpath = "git.code.oa.com/goom/mocker/internal/x86asm",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "format_test.go",
        "inst_test.go",
    ],
    embed = [":go_default_library"],
)
