load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "arg.go",
        "condition.go",
        "condition_util.go",
        "decode.go",
        "gnu.go",
        "inst.go",
        "tables.go",
    ],
    importpath = "github.com/Jakegogo/goom_mocker/internal/arch/arm64asm",
    visibility = ["//:__subpackages__"],
)
