load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "mwrite_left_amd64.s",
        "mwrite_left_arm64.s",
        "memory.go",
        "mwrite_amd64.go",
        "mwrite_arm64.go",
        "mwrite_prot.go",
        "mwrite_unix.go",
        "mwrite_windows.go",
        "mwrite_right_amd64.s",
        "mwrite_right_arm64.s",
        "icache_arm64.go",
        "icache_arm64_17.go",
        "icache_arm64_18.go",
    ],
    importpath = "github.com/Jakegogo/goom_mocker/internal/bytecode/memory",
    visibility = ["//:__subpackages__"],
    deps = select({
        "@io_bazel_rules_go//go/platform:aix_ppc64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android_386": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android_amd64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android_arm": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android_arm64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin_386": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm64": [
            "//internal/logger:go_default_library",
            "//internal/unexports:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly_amd64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_386": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_amd64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_arm": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_arm64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:illumos_amd64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios_386": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios_amd64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios_arm": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios_arm64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:js_wasm": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_386": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_mips": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_mips64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_mips64le": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_mipsle": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_ppc64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_ppc64le": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_riscv64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_s390x": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:nacl_386": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:nacl_amd64p32": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:nacl_arm": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd_386": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd_amd64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd_arm": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd_arm64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:openbsd_386": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:openbsd_amd64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:openbsd_arm": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:openbsd_arm64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:plan9_386": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:plan9_amd64": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:plan9_arm": [
            "//internal/logger:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:solaris_amd64": [
            "//internal/logger:go_default_library",
        ],
        "//conditions:default": [],
    }),
)
