load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "holder.go",
        "space.go",
        "space_arm64.go",
        "mmap_unix.go",
        "mmap_windows.go",
        "makefuncstub.go",
        "stubholder_amd64.s",
        "stubholder_arm64.s",
    ],
    importpath = "git.woa.com/goom/mocker/internal/bytecode/stub",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/bytecode:go_default_library",
        "//internal/logger:go_default_library",
        "//internal/bytecode/memory:go_default_library",
    ],
)
